<resources>
    <string name="app_name">Rexcited</string>
    <string name="all_files">All</string>
    <string name="import_file">Import</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="create_account">Create Account</string>
    <string name="import_by_ocr">OCR</string>
    <string name="import_by_text">Text</string>
    <string name="login">Login</string>
    <string name="preview_file_title">File</string>
    <string name="preview_file_content">Content</string>
    <string name="start_test">Start test</string>
    <string name="delete_file">Delete</string>
    <string name="title_preview">Preview</string>
    <string name="title_test">Test</string>
    <string name="title_answer">Answer</string>
    <string name="title_report">Report</string>
    <string name="view_score">View score</string>
    <string name="memorize_again">Memorize again</string>
    <string name="answer_file_title">File</string>
    <string name="answer_file_content">Content</string>
    <string name="answer_answer_content">Your answer</string>
    <string name="fluency">Fluency</string>
    <string name="accuracy">Accuracy</string>
    <string name="title_files">Source</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_file_title">Title</string>
    <string name="edit_file_desc">Description</string>
    <string name="edit_file_content">Content</string>
    <string name="total_count">Total Count</string>
    <string name="average_rate">Average Rate</string>
    <string name="article">Article</string>
    <string name="knowledge">Knowledge</string>
    <string name="title_me">Me</string>
    <string name="edit">Edit</string>
    <string name="create">Create</string>
</resources>
