<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team.enlighten.rexcited.LoginActivity">

    <EditText
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="@+id/login_username"
        app:layout_constraintRight_toRightOf="@+id/login_username"
        app:layout_constraintTop_toBottomOf="@+id/login_username" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_create"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/create_account"
            android:textColor="?android:attr/textColorPrimaryInverse" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="?android:attr/textColorPrimaryInverse" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
