<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team.enlighten.rexcited.LoginActivity">

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:focusable="true"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="@+id/reg_username"
        app:layout_constraintRight_toRightOf="@+id/reg_username"
        app:layout_constraintTop_toBottomOf="@+id/reg_username" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/btn_create"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimary"
        android:text="@string/create"
        android:textColor="?android:attr/textColorPrimaryInverse"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
