<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="left|center_vertical"
                    android:layout_margin="10dp"
                    android:layout_row="0"
                    android:layout_weight="0"
                    android:text="@string/edit_file_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="left|center_vertical"
                    android:layout_margin="10dp"
                    android:layout_row="0"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text=""
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_margin="10dp"
                android:layout_row="2"
                android:text="@string/edit_file_content"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edit_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_margin="10dp"
                android:layout_row="3"
                android:text="TextView"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_save"
        android:drawablePadding="@dimen/btn_icon_padding"
        android:text="@string/save"
        android:textAlignment="viewStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_cancel"
        android:drawablePadding="@dimen/btn_icon_padding"
        android:text="@string/cancel"
        android:textAlignment="viewStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

</android.support.constraint.ConstraintLayout>